--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -280,13 +280,15 @@ ul {
     position: fixed;
     z-index: 100;
     padding-top: 100px;
+    padding-bottom: 100px;
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 85%;
     background-color: var(--modal-overlay);
     align-items: center;
     justify-content: center;
+    overflow-y: auto;
 }
 
 .modal-content {
