--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -57,9 +57,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 40.25px;
+    font-size: 47.25px;
     color: var(--light-gray);
     font-weight: 400;
+    margin: 10px 0px;
 }
 
 h2 {
@@ -184,7 +185,13 @@ p, ul {
 }
 
 section {
-    padding: 100px;
+    padding: 50px 12%;    
+}
+
+@media (min-width: 1920px) {
+    section {
+        padding: 50px 30%; /* Aumenta o padding para telas ultrawide (acima de 1920px) */
+    }
 }
 
 table {
@@ -438,7 +445,7 @@ pre {
 }
 
 #name, #title, #affiliation {
-    margin: 10px 0px;
+    margin: 5px 0px;
 }
 
 
@@ -549,7 +556,7 @@ pre {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between; /* Espaça os elementos à esquerda e à direita */
-    padding: 50px;
+    /* padding: 50px; */
 }
 
 #personal-info-left {
@@ -594,6 +601,37 @@ pre {
     font-size: 1.5rem;
     padding: 10px;
     color: var(--font-color);
+}
+
+/* Estilo para a tela de carregamento */
+#loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Cor de fundo opaca */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Garante que fique acima de outros elementos */
+    display: none; /* Inicialmente oculto */
+}
+
+/* Estilo para o loader (ícone de carregamento) */
+.loader {
+    border: 16px solid #f3f3f3; /* Cor de fundo */
+    border-top: 16px solid #3498db; /* Cor da parte giratória */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite; /* Animação de rotação */
+}
+
+/* Animação do símbolo de carregamento */
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
 
@@ -678,5 +716,35 @@ pre {
     #interests, #education {
         margin-right: 0;
         width: 100%; /* Garante que os blocos ocupem a largura total */
+    }
+
+    h1 {
+        font-size: 36px;
+    }
+
+    h2 {
+        font-size: 29px;
+    }
+
+    h3 {
+        font-size: 20px;
+    }
+
+    h4 {
+        font-size: 16px;
+    }
+
+    p, ul {
+        font-size: 16px;
+    }
+
+    #personal-picture-container {
+        width: 200px; /* Set the container's width and height to be equal */
+        height: 200px;
+    }
+
+    #personal-network i {
+        font-size: 36px;
+        line-height: 36px;
     }
 }
